--- a/IotaWebApp.web/Views/Shared/_Layout.cshtml
+++ b/IotaWebApp.web/Views/Shared/_Layout.cshtml
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="~/lib/foundation/css/foundation.min.css" />
     <link rel="stylesheet" href="~/lib/slick-carousel/slick.css" />
     <link rel="stylesheet" href="~/lib/slick-carousel/slick-theme.css" />
-    <!-- Load custom styles last to ensure they override any others -->
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/foundation/js/foundation.min.js"></script>
     <script src="~/lib/slick-carousel/slick.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Red+Hat+Display:wght@400;500&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- Header with Logo, Navigation, and Button -->
@@ -22,7 +23,7 @@
                 <div class="cell auto" id="logo-container">
                     <img src="~/Assets/logo.png" alt="IOTA Logo" class="logo" style="max-height: 50px;" />
                 </div>
-                <!-- "Have a Project?" Button and Navigation Links -->
+                <!-- Have a Project Button -->
                 <div class="cell shrink text-right" id="nav-container">
                     <a href="#" class="button project-btn">Have a Project?</a>
                     <!-- Navigation Links -->
